<!--
  ~     LM videodownloader is a browser app for android, made to easily
  ~     download videos.
  ~     Copyright (C) 2018 Loremar Marabillas
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<resources>
    <string name="app_name">Fast video downloader</string>
    <string name="enter_web">Type URL or search</string>
    <string name="prev">Back</string>
    <string name="next">Next</string>
    <string name="bookmark_this_page">Bookmark This</string>
    <string name="rename">Rename</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="queue">Queue</string>
    <string name="close">Close</string>
    <string name="reload">Reload</string>
    <string name="plus">+</string>
    <string name="xClose">X</string>
    <string name="home">Home</string>
    <string name="browser">Browser</string>
    <string name="downloads">Downloads</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="history">History</string>
    <string name="speed_0">Speed: 0KB/s</string>
    <string name="remaining_undefine">Remaining: —</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="downloads_inactive_instruction">Press the Go to Page Button. When the page is
        loaded, play the required video. Wait until app gets the new updated link</string>
    <string name="clear_all_finished">Clear All Finished</string>
    <string name="play_video">Play Video</string>
    <string name="go_to_page">Go to Page</string>
    <string name="rearrange_instructions">Click Move and drag the item to rearrange
        its position</string>
    <string name="move">Move</string>
    <string name="go_to_folder">Go to Folder</string>
    <string name="never_show_download_notice">Never show again</string>
    <string name="add_bookmark_title_label">Title:</string>
    <string name="add_bookmark_url_label">URL:</string>
    <string name="add_bookmark_dest_folder_label">Destination Folder:</string>
    <string name="add_bookmark_new_folder">New Folder</string>
    <string name="add_bookmark_save">Save</string>
    <string name="bookmarks_root_folder">bookmarks</string>
    <string name="bookmarks_new_folder">+ New Folder</string>
    <string name="search">Search</string>
    <string name="clear_history">Clear History</string>
    <string name="ad_blocker">Ad Blocker</string>
    <string name="app_title">Fast video downloader</string>
    <string name="about">Fast Video Downloader is a browser app for downloading videos
        \n\nCopyright ©2019 Muhammad Ali Apps\n\nThis program is free software and licensed
        under the GNU General Public License v2.0\n\n All icons belong to there respective owners.\n\n
    All social media icons except dailymotion and toudu.\n These icons are made by https://www.flaticon.com/authors/pixel-perfect from www.flaticon.com\n\n\
    dailymotion icon \n Icon made by Samat Odedra from https://www.shareicon.net/author/samat-odedara.\n\n toudu icon\n Icon made by https://www.iconfinder.com/iconsets/metro-ui-dock.
    \n\nbookmark icon\n Icon made by https://www.freepik.com/ from www.flaticon.com.</string>
    <string name="about_name">About</string>
    <string name="privacy_policy">Privacy Policy

Muhammad Ali built the Fast video Downloader app as an Open Source app. This SERVICE is provided by Muhammad Ali at no cost and is intended for use as is.

This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.

If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Fast video Downloader unless otherwise defined in this Privacy Policy.

Information Collection and Use

For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.

The app does use third party services that may collect information used to identify you.

Link to privacy policy of third party service providers used by the app

    Google Play Services
    AdMob

Log Data

I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.

Cookies

Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.

This Service does not use these \“cookies\” explicitly. However\, the app may use third party code and libraries that use \“cookies\” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

Service Providers

I may employ third-party companies and individuals due to the following reasons:

    To facilitate our Service\;
    To provide the Service on our behalf;
    To perform Service-related services; or
    To assist us in analyzing how our Service is used.

I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

Security

I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.

Links to Other Sites

This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

Children’s Privacy

These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.

Changes to This Privacy Policy

I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.

Contact Us

If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at alihamuh@gmail.com.
</string>
    <string name="privacy">Privacy Policy</string>
    <string name="try_these_sites">Try these sites</string>
    <string name="title_activity_test">Fast video downloader</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
